--- a/.env
+++ b/.env
@@ -33,12 +33,13 @@ SUPER_ADMIN_NAME=System Administrator
 # Database Seeding
 SEED_DATABASE=true
 
-# Email Configuration (for future use)
+# Email Configuration
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=nkoushikpanda123@gmail.com
-EMAIL_PASS=kcubpaawxzkztygd
+EMAIL_PASS=zigsbciqdjshuipd
 EMAIL_FROM=expensetracker@noreply.com
+SEND_WELCOME_EMAIL=true
 
 # Security Settings
 ADMIN_PASSWORD_MIN_LENGTH=8
