--- a/.env
+++ b/.env
@@ -46,3 +46,7 @@ ADMIN_PASSWORD_MIN_LENGTH=8
 ADMIN_SESSION_TIMEOUT=3600000
 ADMIN_MAX_LOGIN_ATTEMPTS=5
 ADMIN_LOCKOUT_DURATION=900000
+# Vendor Admin Credentials
+VENDOR_ADMIN_EMAIL=vendor.admin@frovo.com
+VENDOR_ADMIN_PASSWORD=VendorAdmin@123
+VENDOR_ADMIN_NAME=Vendor Administrator
