--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "zod": "^3.22.4"
   },
@@ -44,6 +45,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
