fix file uplaod and all problems

--- a/.env
+++ b/.env
@@ -50,3 +50,8 @@ ADMIN_LOCKOUT_DURATION=900000
 VENDOR_ADMIN_EMAIL=vendor.admin@frovo.com
 VENDOR_ADMIN_PASSWORD=VendorAdmin@123
 VENDOR_ADMIN_NAME=Vendor Administrator
+
+# Cloudinary Configuration (for file uploads)
+CLOUDINARY_CLOUD_NAME=dyr1i3bme
+CLOUDINARY_API_KEY=199632979619934
+CLOUDINARY_API_SECRET=xzMB2QidCkLgJn4oCD-kmWttqb4
