fix error and modification

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Server Configuration
-PORT=5000
+PORT=3000
 NODE_ENV=development
 
 # Database Configuration
@@ -55,3 +55,13 @@ VENDOR_ADMIN_NAME=Vendor Administrator
 CLOUDINARY_CLOUD_NAME=dyr1i3bme
 CLOUDINARY_API_KEY=199632979619934
 CLOUDINARY_API_SECRET=xzMB2QidCkLgJn4oCD-kmWttqb4
+
+# Catalogue Configuration
+CATALOGUE_IMAGE_FOLDER=frovo/catalogue_images
+CATEGORY_IMAGE_FOLDER=frovo/category_images
+MAX_PRODUCT_IMAGES=10
+MIN_PRODUCT_IMAGES=1
+MAX_EXPIRY_ALERT_DAYS=365
+MIN_EXPIRY_ALERT_DAYS=1
+DASHBOARD_DEFAULT_PAGE_SIZE=10
+DASHBOARD_MAX_PAGE_SIZE=100
