--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ NODE_ENV=development
 
 # Database Configuration
 MONGODB_URI=mongodb+srv://koushikpandafs_db_user:nDPsXXYHVuaigoU@cluster0.isbfyik.mongodb.net/frovo_backend_rbac?retryWrites=true&w=majority
+# MONGODB_URI=mongodb+srv://koushik_db_user:903lViuw5JHTIclT@cluster0.z06dx7e.mongodb.net/frovo_backend_rbac?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_ACCESS_SECRET=your-super-secret-access-key-change-this-in-production
