fix image provider

--- a/.env
+++ b/.env
@@ -52,10 +52,21 @@ VENDOR_ADMIN_EMAIL=vendor.admin@frovo.com
 VENDOR_ADMIN_PASSWORD=VendorAdmin@123
 VENDOR_ADMIN_NAME=Vendor Administrator
 
-# Cloudinary Configuration (for file uploads)
+# Storage Provider Configuration (cloudinary | s3)
+STORAGE_PROVIDER=cloudinary
+
+# Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dyr1i3bme
 CLOUDINARY_API_KEY=199632979619934
 CLOUDINARY_API_SECRET=xzMB2QidCkLgJn4oCD-kmWttqb4
+
+# AWS S3 Configuration (uncomment to use S3 instead of Cloudinary)
+# STORAGE_PROVIDER=s3
+# AWS_ACCESS_KEY_ID=your_access_key
+# AWS_SECRET_ACCESS_KEY=your_secret_key
+# AWS_REGION=ap-south-1
+# AWS_S3_BUCKET=your-bucket-name
+# AWS_S3_ENDPOINT=http://localhost:9000  # Optional: For MinIO or S3-compatible services
 
 # Catalogue Configuration
 CATALOGUE_IMAGE_FOLDER=frovo/catalogue_images
