--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format:fix": "prettier --write \"src/**/*.{ts,js,json}\"",
     "lint:check": "eslint \"src/**/*.{ts,js}\"",
     "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
+    "clean:console": "node scripts/remove-console.js",
     "prepare": "husky"
   },
   "keywords": [
